// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsChoiceGroup render with fail status 1`] = `
<ChoiceGroupPassFail
  data-automation-id="tabStopsPassFailChoiceGroup"
  isLabelVisible={false}
  onChange={[Function]}
  onUndoClickedPassThrough={[Function]}
  options={
    [
      {
        "key": "pass",
        "text": "Pass",
      },
      {
        "key": "fail",
        "text": "Fail",
      },
    ]
  }
  secondaryControls={
    <CustomizedIconButton
      ariaLabel="add failure instance"
      data-automation-id="addTabStopsFailureInstance"
      iconProps={
        {
          "iconName": "add",
        }
      }
      onClick={[Function]}
    />
  }
  selectedKey="fail"
/>
`;

exports[`TabStopsChoiceGroup render with pass status 1`] = `
<ChoiceGroupPassFail
  data-automation-id="tabStopsPassFailChoiceGroup"
  isLabelVisible={false}
  onChange={[Function]}
  onUndoClickedPassThrough={[Function]}
  options={
    [
      {
        "key": "pass",
        "text": "Pass",
      },
      {
        "key": "fail",
        "text": "Fail",
      },
    ]
  }
  secondaryControls={null}
  selectedKey="pass"
/>
`;

exports[`TabStopsChoiceGroup render with unknown status 1`] = `
<ChoiceGroupPassFail
  data-automation-id="tabStopsPassFailChoiceGroup"
  isLabelVisible={false}
  onChange={[Function]}
  onUndoClickedPassThrough={[Function]}
  options={
    [
      {
        "key": "pass",
        "text": "Pass",
      },
      {
        "key": "fail",
        "text": "Fail",
      },
    ]
  }
  secondaryControls={null}
  selectedKey="unknown"
/>
`;
